uncomment failing test and fix